tests/golden/3-basic-and-simple-literals/valid/common/single-quoted-strings-w-inline-quotes-3.yini
// NOTE: Raw string doesn't support escapes, escape sequences will appear as-is!

^ StringsWithQuotes
str = 'Hello \"World\"'
