tests/golden/3-basic-and-simple-literals/invalid/common/bad-single-quoted-strings-w-inline-quotes-1.yini
// NOTE: Default (raw) strings doesn't support escapes!

^ StringsWithQuotes
str = 'Hello \'World\''
